# os_labs

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
lab01/: CMakeLists.txt  child_process.cpp  parent_process.cpp
lab02/: CMakeLists.txt  elements.cpp
lab03/: CMakeLists.txt  child_process1.cpp  parent_process1.cpp
lab04/: CMakeLists.txt
lab04/include/: integral.h  pi.h
lab04/src/: integral.cpp  pi.cpp
lab04/test/: test_dynamic.cpp  test_static.cpp
lab05-07/: CMakeLists.txt  client.cpp  server.cpp
test/: CMakeLists.txt  test.cpp
